Git_WGBH_QC/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Source_Code_For_Station__c</fullName>
        <description>Used to define the first 3 characters of the Source Code</description>
        <formula>case( Station__c,
&quot;WGBH&quot;,&quot;GBH&quot;,
&quot;WGBY&quot;,&quot;GBY&quot;,
&quot;WCAI&quot;,&quot;CAI&quot;,
&quot;ACADEMY OF MUSIC&quot;,&quot;AOM&quot;,
&quot;CLASSICAL RADIO&quot;,&quot;GBH&quot;, 
&quot;&quot;)</formula>
        <label>Source Code Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Source code from TA campaigns</inlineHelpText>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time_Date__c</fullName>
        <inlineHelpText>Start Date and Time of the Overall Program</inlineHelpText>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>The radio/tv station call letters that the campaign is representing.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Channel__c</fullName>
        <inlineHelpText>Sub Channel is a descriptor of the Channel</inlineHelpText>
        <label>Sub Channel</label>
        <picklist>
            <controllingField>Channel_Technique__c</controllingField>
            <picklistValues>
                <fullName>.org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCTV Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-Sites (Landing Pages)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Per Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_Title__c</fullName>
        <label>Subject/Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Designation__c</fullName>
        <description>The designation by donor of where the funds are to be applied.  Will be a look up relationship from the gift entry, there will be an override.</description>
        <inlineHelpText>The designation by donor of where the funds are to be applied.</inlineHelpText>
        <label>Support Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppression_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to indicate if campaign members have been run thru the suppression file</description>
        <inlineHelpText>If the box is checked then the campaign has been run through the suppression file by the vendor or by WGBH Operations, if the box is unchecked please validate if it needs to be run through the suppression file.</inlineHelpText>
        <label>Suppression File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TA_Campaign_Source_Code__c</fullName>
        <description>TA Source code, depicts the Station</description>
        <externalId>true</externalId>
        <label>Legacy Source Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TV_Radio_Show_Program__c</fullName>
        <inlineHelpText>TV/Radio show program code to indicate which program is attached to the sub program or the overall program.  This same program code is used with Cases to track programming issues.</inlineHelpText>
        <label>TV/Radio Show Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Source_Code__c</fullName>
        <label>Test Source Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Information__c</fullName>
        <label>Ticket Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Url__c</fullName>
        <label>Ticket Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Drop__c</fullName>
        <inlineHelpText>The total number receiving the marketing effort</inlineHelpText>
        <label>Total Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Program_Count__c</fullName>
        <label>Total Program Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ttl_Cost__c</fullName>
        <label>Total Material/Production Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <label>Venue Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGBH_AUAC__c</fullName>
        <inlineHelpText>When you select the account unit please select a related activity, if this number is unknown please check with your Lawson support person.</inlineHelpText>
        <label>Accounting Unit Activity</label>
        <referenceTo>WGBH_AUAC__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGBH_Accounting_Unit__c</fullName>
        <inlineHelpText>Select the accounting unit which is related to the financial segment.</inlineHelpText>
        <label>Accounting Unit</label>
        <referenceTo>WGBH_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Inbound__c</fullName>
        <label>Web Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zip_Postalcode__c</fullName>
        <label>Zip/Postalcode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type__c</fullName>
        <description>Activity Type</description>
        <inlineHelpText>Activity Type</inlineHelpText>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type_value__c</fullName>
        <label>Activity Type Value</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>campaign_type_value__c</fullName>
        <label>Campaign Type Value</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fiscal_year__c</fullName>
        <description>Fiscal Year</description>
        <inlineHelpText>Fiscal Year</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketing_cal__Color_Status__c</fullName>
        <label>Color Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>PARENT_ID</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>Source_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns/Project</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.ID</columns>
        <columns>Source_Code__c</columns>
        <columns>TA_Campaign_Source_Code__c</columns>
        <columns>Campaign_Description__c</columns>
        <columns>Channel_Technique__c</columns>
        <columns>Sub_Channel__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Start_Time_Date__c</columns>
        <columns>End_Time_Date__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TA_Campaign_Source_Code__c</field>
            <operation>contains</operation>
            <value>hset11</value>
        </filters>
        <label>Campaign Cleanup</label>
    </listViews>
    <listViews>
        <fullName>All_Planned_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Product_Program__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Campaign_Description__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Channel_Technique__c</columns>
        <columns>Source_Code__c</columns>
        <columns>Job__c</columns>
        <columns>Start_Time_Date__c</columns>
        <columns>End_Time_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>All Planned Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_2008</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>equals</operation>
            <value>9/1/2007</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>equals</operation>
            <value>8/31/2008</value>
        </filters>
        <label>2008 Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_2009</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>equals</operation>
            <value>9/1/2008</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>equals</operation>
            <value>8/31/2009</value>
        </filters>
        <label>2009 Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_2010</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>equals</operation>
            <value>9/1/2009</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>equals</operation>
            <value>8/31/2010</value>
        </filters>
        <label>2010 Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Start_Time_Date__c</columns>
        <columns>Source_Code__c</columns>
        <columns>Station__c</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CDP_Grouping__c</columns>
        <columns>HTML_Description__c</columns>
        <columns>Giving_Segment__c</columns>
        <columns>TV_Radio_Show_Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel_Technique__c</field>
            <operation>equals</operation>
            <value>Telesales</value>
        </filters>
        <filters>
            <field>Sub_Channel__c</field>
            <operation>equals</operation>
            <value>Outbound</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2011 12:00 AM</value>
        </filters>
        <label>All TM Campaigns</label>
    </listViews>
    <listViews>
        <fullName>On_AIR_Working_list</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Sub_Channel__c</columns>
        <columns>Channel_Technique__c</columns>
        <columns>TA_Campaign_Source_Code__c</columns>
        <columns>Source_Code__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>On Air Working List</label>
        <sharedTo>
            <roles>User Operations</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SP_testing_view</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Campaign_Type__c</columns>
        <columns>TA_Campaign_Source_Code__c</columns>
        <columns>Active__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Event_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>SP</value>
        </filters>
        <label>Source Programming Test View</label>
    </listViews>
    <listViews>
        <fullName>WGBH_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Venue_Name__c</columns>
        <columns>HTML_Description__c</columns>
        <columns>Start_Time_Date__c</columns>
        <columns>End_Time_Date__c</columns>
        <columns>Feature__c</columns>
        <columns>Station__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.WGBH_Event</value>
        </filters>
        <label>WGBH Events</label>
    </listViews>
    <listViews>
        <fullName>WGBY_FY12_Murrow_Society_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Station__c</field>
            <operation>equals</operation>
            <value>WGBY</value>
        </filters>
        <filters>
            <field>Giving_Segment__c</field>
            <operation>equals</operation>
            <value>Murrow Society</value>
        </filters>
        <filters>
            <field>Start_Time_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2011 12:00 AM</value>
        </filters>
        <label>WGBY FY12 Murrow Society Campaigns</label>
        <sharedTo>
            <roles>Director of Major Gifts</roles>
            <roles>Manager Major Gifts</roles>
            <roles>User Audience Member Services</roles>
            <roles>User Major Gifts</roles>
            <roles>User Operations</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2011_Campaigns</fullName>
        <columns>Source_Code__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Product_Program__c</columns>
        <columns>Station__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Solicitation_Type__c</columns>
        <columns>Segment_for_the_Project__c</columns>
        <columns>Effort_for_Project__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>House_File_Name__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>2011</value>
        </filters>
        <label>2011 Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Event for the Web Site</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Not_On_Air</fullName>
        <active>true</active>
        <description>All Campaigns: non-Web Events</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>WGBH_Event</fullName>
        <active>true</active>
        <label>WGBH Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>WGBH_Standard</fullName>
        <active>true</active>
        <description>Standard Campaign</description>
        <label>WGBH Campaign - Project</label>
    </recordTypes>
</CustomObject>